# family_finance

./: .gitignore  Dockerfile  README.md  docker-compose-local.yaml  pyproject.toml
.github/workflows/: main.yaml
finance_bot/: db.py  keyboards.py  main.py  middleware.py  misc.py  models.py  settings.py  states.py  texts.py
finance_bot/handlers/: __init__.py  categories.py  service.py  stats.py  subscriptions.py  transactions.py
finance_bot/periodic_jobs/: reminder.py  subscription_manager.py
