[tool.poetry]
name = "family_finance"
version = "0.1.0"
description = ""
authors = ["Benyamin Ginzburg <benyomin.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

aiogram = '*'
psycopg = {extras = ["binary"],version = '*'}
pydantic = {extras = ["dotenv"],version = '*'}
betterlogging = '*'
apscheduler = '*'
plotly = '*'
kaleido = '0.2.1'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
