[tool.poetry]
name = "family_finance"
version = "0.1.0"
description = ""
authors = ["Benyamin Ginzburg <benyomin.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

aiogram = '*'
psycopg = {extras = ["binary"], version = '3.1.9'}
pydantic = {extras = ["dotenv"], version = '<2.0'}
betterlogging = '*'
apscheduler = '*'
plotly = '*'
kaleido = '0.2.1'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
