[tool.poetry]
name = "family_finance"
version = "0.1.0"
description = ""
authors = ["Benyamin Ginzburg <benyomin.94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

aiogram = '2.25.1'
psycopg = {extras = ["binary"], version = '3.1.9'}
pydantic = '2.8.2'
pydantic-settings = '2.4.0'
betterlogging = '*'
apscheduler = '3.10.4'
plotly = '*'
kaleido = '0.2.1'

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
